<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_album"
        android:contentDescription="@string/now_playing"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/song_title"
        style="@style/PlayerSongTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/unknown_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_art" />

    <TextView
        android:id="@+id/song_artist"
        style="@style/PlayerSongArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/unknown_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_title" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_artist" />

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/seek_bar"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/seek_bar"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <LinearLayout
        android:id="@+id/controls_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_time">

        <ImageButton
            android:id="@+id/btn_shuffle"
            style="@style/PlayerButton"
            android:src="@drawable/ic_shuffle"
            android:contentDescription="@string/shuffle" />

        <ImageButton
            android:id="@+id/btn_previous"
            style="@style/PlayerButton"
            android:src="@drawable/ic_skip_previous"
            android:contentDescription="@string/previous" />

        <ImageButton
            android:id="@+id/btn_play_pause"
            style="@style/PlayerButton.Large"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play" />

        <ImageButton
            android:id="@+id/btn_next"
            style="@style/PlayerButton"
            android:src="@drawable/ic_skip_next"
            android:contentDescription="@string/next" />

        <ImageButton
            android:id="@+id/btn_repeat"
            style="@style/PlayerButton"
            android:src="@drawable/ic_repeat"
            android:contentDescription="@string/repeat" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_favorite"
        style="@style/PlayerButton"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_favorite_border"
        android:contentDescription="@string/add_to_favorites"
        app:layout_constraintEnd_toStartOf="@id/btn_queue"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/controls_layout" />

    <ImageButton
        android:id="@+id/btn_queue"
        style="@style/PlayerButton"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_queue_music"
        android:contentDescription="@string/queue"
        app:layout_constraintBottom_toBottomOf="@id/btn_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_favorite"
        app:layout_constraintTop_toTopOf="@id/btn_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>
